terraform-modules/modules/web-server/main.tf
provider "aws" {
  region = "ap-south-1"
}

# sg

resource "aws_security_group" "module-sg" {
  name = "${var.name}-sg"
  description = "module security groups"
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
   from_port = 0
   to_port = 0
   protocol = "-1"
   cidr_blocks = ["0.0.0.0/0"]
  } 
}

#ec2

resource "aws_instance" "web" {
  ami = var.ami_id
  instance_type = var.instance_type
  vpc_security_group_ids = [aws_security_group.module-sg.id]
  tags = { Name = var.name }
}
